--- a/package.json
+++ b/package.json
@@ -18,28 +18,41 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tailwindcss/vite": "^4.1.7",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/head": "^2.0.0",
+    "dotenv": "^16.4.7",
     "firebase": "^11.6.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-tippy": "^6.7.0",
+    "vue3-toastify": "^0.2.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^0.21.2",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "sass-embedded": "^1.86.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.0",
+    "unplugin-auto-import": "^19.1.2",
+    "video.js": "^8.22.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.2.8"
   }
 }
