--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "module": "ESNext",
     "noImplicitAny": false,
+    "types": ["vue3-toastify/global"],
 
     "paths": {
       "@/*": ["./src/*"]
