--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vueuse/head": "^2.0.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.6.0",
+    "hls.js": "^1.6.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
